--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==2.0.0
 Django==4.2
 django-appconf==1.0.5
 django-compressor==4.3.1
+django-cors-headers==4.0.0
 django-heroku==0.3.1
 gunicorn==20.1.0
 Pillow==9.5.0
